--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+        "start": "node index.js", // Assuming your start script
+    "dev": "nodemon index.js" // Script for development
   },
   "keywords": [],
   "author": "",
